[project]
name = "nonebot-plugin-feed-bot-food"
version = "0.1.3"
description = "A NoneBot plugin for feeding the bot food."
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "httpx>=0.28.1",
    "nonebot-adapter-onebot>=2.4.6,<3.0.0",
    "nonebot-plugin-apscheduler>=0.5.0",
    "nonebot-plugin-localstore>=0.7.4",
    "nonebot2>=2.4.4,<3.0.0",
    "pydantic>=2.7.0,<3.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.8.0,<1.0.0",
]

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[tool.uv]
default-groups = ["dev"]

[tool.uv.build-backend]
module-name = "nonebot_plugin_feed_bot_food"
module-root = "src"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "UP", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" },
]
plugins = ["nonebot_plugin_feed_bot_food"]
